# svc-personal-dashboard

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  Dockerfile  README.md  docker-compose.yml
.yoke/: notify-pending.json
data/beaverhabits/: habits.db
docs/adr/: 0001-hybrid-architecture.md  0002-vikunja-for-tasks.md  0003-firefly-iii-finances.md  0004-google-calendar-saas.md  0005-linkding-for-bookmarks.md  0006-monorepo-blueprint.md  0007-mcp-integration-topology.md
docs/ai/10-mcp-conventions/: 10-mcp-conventions-plan.md  10-mcp-conventions-report.md  10-mcp-conventions-review.md
docs/ai/12-mcp-vikunja-supergateway/: 12-mcp-vikunja-supergateway-plan.md  12-mcp-vikunja-supergateway-report.md  12-mcp-vikunja-supergateway-review.md  12-mcp-vikunja-supergateway-task.md
docs/ai/13-firefly-mcp-native/: 13-firefly-mcp-native-plan.md  13-firefly-mcp-native-report.md  13-firefly-mcp-native-review.md  13-firefly-mcp-native-task.md
docs/mcp/: CONVENTIONS.md  firefly-iii.md
services/_mcp/: Dockerfile  README.md
services/beaverhabits/: .env.example
services/firefly-iii/: .env.example
services/infra/: .env.example  docker-compose.yml  init.sql
services/linkding/: .env.example
services/opentickly/: .env.example
services/opentickly/mcp/: Dockerfile  README.md  pyproject.toml
services/opentickly/mcp/opentickly_mcp/: __init__.py  client.py  config.py  server.py
services/opentickly/mcp/tests/: test_tools.py
services/vaultwarden/: .env.example
services/vikunja/: .env.example
services/wger/: .env.example  README.md  nginx.conf
(+28 files in other folders)
