[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opentickly-mcp"
version = "0.1.0"
description = "FastMCP server exposing OpenTickly (Toggl-compatible) time tracking to Hermes."
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.11,<3",
    "httpx>=0.27,<0.29",
]

[project.scripts]
opentickly-mcp = "opentickly_mcp.server:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.6,<0.13",
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<0.25",
    "respx>=0.21,<0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["opentickly_mcp"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
